--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,9 @@
                     "-g", // 生成和调试有关的信息
                     "-Wall", // 开启额外警告
                     "-static-libgcc", // 静态链接
+                    "-lglut32",//使用glut
+                    "-lglu32",
+                    "-lopengl32",
                     "-fcolor-diagnostics",
                     "--target=x86_64-w64-mingw", // 默认target为msvc，不加这一条就会找不到头文件
                     "-std=c++11" // C语言最新标准为c11，或根据自己的需要进行修改
