--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,6 @@
     "editor.minimap.enabled": false, // 我个人不用minimap，就是右边那个东西
     "editor.dragAndDrop": false, // 选中文字后，可以拖动它们调整位置。我是不需要
     "files.autoGuessEncoding": true // 启用后，会在打开文件时尝试猜测字符集编码
-
+    "editor.background": "#202020",//在主题的json文件中设置
 }
 */
