--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,16 +36,27 @@
 /*全局设置
 {
     "editor.fontFamily": "Consolas, 微软雅黑", // 控制编辑器字体
-    "editor.fontSize": 18,
+    "editor.fontSize": 19,
     "workbench.colorTheme": "One Dark Pro", // 主题
     "files.trimTrailingWhitespace": true, // 保存时，删除每一行末尾的空格
     "workbench.colorCustomizations": {
-            "activityBar.foreground": "#33ff66" // 自定义颜色
+            "activityBar.foreground": "#8392e6" // 自定义颜色
         },
     "git.enabled": true, // 如果你不用git，我建议你关闭它
-    "editor.minimap.enabled": false, // 我个人不用minimap，就是右边那个东西
+    "editor.minimap.enabled": true, // 我个人不用minimap，就是右边那个东西
     "editor.dragAndDrop": false, // 选中文字后，可以拖动它们调整位置。我是不需要
-    "files.autoGuessEncoding": true // 启用后，会在打开文件时尝试猜测字符集编码
+    "files.autoGuessEncoding": true,
+    "sync.gist": "966eab9d5ae4325d7d39792602f63d03",
+    "sync.lastUpload": "2018-01-15T09:22:27.761Z",
+    "sync.autoDownload": false,
+    "sync.autoUpload": false,
+    "sync.lastDownload": "",
+    "sync.forceDownload": false,
+    "sync.anonymousGist": false,
+    "sync.host": "",
+    "sync.pathPrefix": "",
+    "sync.quietSync": false,
+    "sync.askGistName": false,
     "editor.background": "#202020",//在主题的json文件中设置
 }
 */
